# Gan-MacUpdate

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json
deploy/: nginx.conf  noupdate.service
noupdate-server/: .env.example  Cargo.toml
noupdate-server/migrations/: 0001_init.sql
noupdate-server/src/: main.rs
noupdate-server/static/: dashboard.html  docs.html  index.html  login.html  sitemap.xml  verify.html
noupdate-server/static/en/: dashboard.html  docs.html  index.html  login.html  sitemap.xml
noupdate-tool/: BlockMacOSUpdate.mobileconfig
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-concept.txt  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: StatCard.tsx
src/lib/: api.ts  i18n.ts  store.ts  types.ts
updatemate-activation-service/: build.gradle  settings.gradle
updatemate-activation-service/src/main/java/com/updatemate/: HealthController.java  LicenseController.java  (+1 more)
updatemate-activation-service/src/main/resources/: application.properties
updatemate-client/UpdateMate/: UpdateMateApp.swift
updatemate-client/UpdateMate/Managers/: BadgeManager.swift  HostsManager.swift  ProfileManager.swift  StrategyEngine.swift  TrialManager.swift
updatemate-client/UpdateMate/Models/: UpdateStrategy.swift
updatemate-client/UpdateMate/Resources/Localization/: Localizable_en.strings  Localizable_zh-Hans.strings
updatemate-client/UpdateMate/Views/: DashboardView.swift
xpay/: application.properties.example
